--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,44 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.jacoco</groupId>
+  			<artifactId>jacoco-maven-plugin</artifactId>
+  			<version>0.6.2.201302030002</version>
+  			<executions>
+  				<execution>
+  					<id>prepare-agent</id>
+  					<goals>
+  						<goal>prepare-agent</goal>
+  					</goals>
+  				</execution>
+  				<execution>
+  					<id>report</id>
+  					<phase>prepare-package</phase>
+  					<goals>
+  						<goal>report</goal>
+  					</goals>
+  				</execution>
+  				<execution>
+  					<id>check</id>
+  					<goals>
+  						<goal>check</goal>
+  					</goals>
+  					<configuration>
+  						<check>
+  							<classRatio>100</classRatio>
+        					<instructionRatio>80</instructionRatio>
+        					<methodRatio>85</methodRatio>
+        					<branchRatio>85</branchRatio>
+        					<complexityRatio>85</complexityRatio>
+        					<lineRatio>80</lineRatio>
+  						</check>
+  					</configuration>
+  				</execution>
+  			</executions>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
