--- a/pom.xml
+++ b/pom.xml
@@ -25,45 +25,50 @@
 			<version>1.8.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 	</dependencies>
 	<build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.jacoco</groupId>
-  			<artifactId>jacoco-maven-plugin</artifactId>
-  			<version>0.6.2.201302030002</version>
-  			<executions>
-  				<execution>
-  					<id>prepare-agent</id>
-  					<goals>
-  						<goal>prepare-agent</goal>
-  					</goals>
-  				</execution>
-  				<execution>
-  					<id>report</id>
-  					<phase>prepare-package</phase>
-  					<goals>
-  						<goal>report</goal>
-  					</goals>
-  				</execution>
-  				<execution>
-  					<id>check</id>
-  					<goals>
-  						<goal>check</goal>
-  					</goals>
-  					<configuration>
-  						<check>
-  							<classRatio>100</classRatio>
-        					<instructionRatio>80</instructionRatio>
-        					<methodRatio>85</methodRatio>
-        					<branchRatio>85</branchRatio>
-        					<complexityRatio>85</complexityRatio>
-        					<lineRatio>80</lineRatio>
-  						</check>
-  					</configuration>
-  				</execution>
-  			</executions>
-  		</plugin>
-  	</plugins>
-  </build>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.6.2.201302030002</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<check>
+								<classRatio>100</classRatio>
+								<instructionRatio>80</instructionRatio>
+								<methodRatio>85</methodRatio>
+								<branchRatio>85</branchRatio>
+								<complexityRatio>85</complexityRatio>
+								<lineRatio>80</lineRatio>
+							</check>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
